--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -45,6 +45,10 @@
             <version>${mysql.connector.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
